# agenteChilecompra

./: .GITIGNORE  README.md  main.py  pyproject.toml
api/: requests.py  routes.py
bd/: contexto.json
controllers/: bd_llm_controller.py  doc_llm_controller.py  orchestator_controller.py
util/: logger_config.py
